--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "web3": "^1.0.0-beta.35"
+    "@ethereumjs/common": "file:../ethereumjs-vm/packages/common",
+    "@ethereumjs/tx": "file:../ethereumjs-vm/packages/tx",
+    "fs": "0.0.1-security",
+    "quorum-js": "^0.3.6",
+    "rlp": "^2.2.6",
+    "web3": "^1.2.11",
+    "web3-providers-http": "^1.3.0"
   }
 }
